syntax = "proto3";

package chitty_chat;

option go_package = "github.com/kanerix/chitty-chat/proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
    string username = 1;
    bool anonymous = 2 ; 
}

message LogoutRequest {
    string session_token = 1;
}

message LoginResponse {
    string session_token = 1;
}

message LogoutResponse{}
